src/objects/Merchandise__c.object
<CustomObject>
    <description>製品管理カスタムオブジェクト</description>
    <fields>
        <fullName>Condition__c</fullName>
        <label>状態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>１</fullName>
                </value>
                <value>
                    <fullName>２</fullName>
                </value>
                <value>
                    <fullName>３</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>製品の説明</description>
        <inlineHelpText>最大255文字まで入力可能</inlineHelpText>
        <label>製品説明</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>製品価格情報</description>
        <inlineHelpText>整数16桁</inlineHelpText>
        <label>価格</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>製品の在庫数</description>
        <inlineHelpText>整数18桁</inlineHelpText>
        <label>数量</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>商品</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_Merchandise</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>製品名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>